--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "axios": "^0.17",
         "cross-env": "^5.1",
         "laravel-mix": "^1.0"
+    },
+    "dependencies": {
+        "vue": "^2.5.13"
     }
 }
