--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "devDependencies": {
         "axios": "^0.17",
         "cross-env": "^5.1",
-        "laravel-mix": "^1.0"
+        "laravel-mix": "^2.0.0",
+        "tailwindcss": "^0.4.1"
     },
     "dependencies": {
         "vue": "^2.5.13"
