--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
         "axios": "^0.17",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0.0",
-        "tailwindcss": "^0.4.1"
-    },
-    "dependencies": {
+        "tailwindcss": "^0.4.1",
         "vue": "^2.5.13"
     }
 }
