--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     },
     "devDependencies": {
         "axios": "^0.17",
+        "bulma": "^0.6.2",
         "cross-env": "^5.1",
         "laravel-mix": "^2.0.0",
-        "tailwindcss": "^0.4.1",
         "vue": "^2.5.13"
     }
 }
